# asignaciones_p2_diana

./: CMakeLists.txt
1_diana/: varia_cam_lib.c  varia_cam_lib.h  varia_cam_main.c  varia_cam_minunit.c
libs_generales/: minunit.h
